# memoryRank_engine

./: DEPLOYMENT_READY.md  LICENSE  NEXT_TASKS.md  ORGANIZATION_SUMMARY.md  README.md  TECHNICAL_TASKS.md  TODAY_WORK_SUMMARY.md  TOMORROW_WORK_ANALYSIS.md  pyproject.toml
Amygdala/: BLOCKCHAIN_INFO.md  README.md
Amygdala/amygdala/: __init__.py  amygdala_engine.py  config.py  data_types.py
BasalGanglia/: README.md
Hypothalamus/: BLOCKCHAIN_INFO.md  README.md
Hypothalamus/hypothalamus/: __init__.py  config.py  data_types.py  hypothalamus_engine.py
MemoryRank/: README.md
MemoryRank/package/memoryrank/: pham_chain_persistence.json
PFC/: PHAM_BLOCKCHAIN_SIGNATURE.md  README.md
Panorama/: README.md
Panorama/package/panorama/: pham_chain_persistence.json
Thalamus/: BLOCKCHAIN_INFO.md  README.md
Thalamus/thalamus/: __init__.py  config.py  data_types.py  thalamus_engine.py
chroma_db_demo/: chroma.sqlite3
chroma_hybrid/: chroma.sqlite3
chroma_vector_only/: chroma.sqlite3
docs/: ALZHEIMER_DEMENTIA_DYNAMICS.md  ALZHEIMER_DEMENTIA_IMPLEMENTATION.md  API_REFERENCE.md  ARCHITECTURE_STRUCTURE.md  COGNITIVE_DYSFUNCTION.md  COGNITIVE_LOOPS_ANALYSIS.md  COGNITIVE_STATES.md  COGNITIVE_STATES_HONEST.md  CURRENT_STATUS_AND_RECOMMENDATION.md  DISORDER_SPECTRUM_ANALYSIS.md  DYNAMICS_ENGINE_COMPLETE.md  DYNAMICS_ENGINE_FINAL_STATUS.md  ENGINE_STRUCTURE_ANALYSIS.md  FOLDER_STRUCTURE_RECOMMENDATION.md  IMPLEMENTATION_STATUS_COLD.md  LONG_TERM_MEMORY.md  MINIMAL_DYNAMICS_MODEL.md  MODULARITY_ANALYSIS.md  MODULARITY_IMPROVEMENTS.md  QUICK_DECISION_GUIDE.md  README.md  TEST_RESULTS.md
docs/development/: WORK_LOG_2026_02_01.md
docs/version_history/: PHAM_BLOCKCHAIN_LOG.md  PHAM_BLOCKCHAIN_LOG_v2.0.2.md  VERSION_HISTORY.md
examples/: cognitive_polarity_demo.py  integrated_pipeline.py  langchain_memory.py  precession_demo.py  vector_db_chroma.py
src/cognitive_kernel/: __init__.py  cognitive_modes.py  core.py  pipeline.py  vector_integration.py
src/cognitive_kernel/engines/: __init__.py  interfaces.py
src/cognitive_kernel/engines/dynamics/: __init__.py  config.py  dynamics_engine.py  models.py
src/cognitive_kernel/engines/pfc/: config.py
