[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-kernel"
version = "2.0.0"
description = "Minimal, verifiable implementation of persistent long-term memory for AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "GNJz (Qquarts)", email = "qquartsco@gmail.com"}
]
maintainers = [
    {name = "GNJz (Qquarts)", email = "qquartsco@gmail.com"}
]
keywords = [
    "cognitive",
    "memory",
    "ai",
    "agent",
    "long-term-memory",
    "pagerank",
    "decision-making",
    "brain",
    "neuroscience",
    "llm",
    "langchain",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]
langchain = [
    "langchain>=0.1.0",
]
vector = [
    "chromadb>=0.4.0",
    "faiss-cpu>=1.7.0",
    "sentence-transformers>=2.2.0",
]
all = [
    "cognitive-kernel[dev,langchain,vector]",
]

[project.urls]
Homepage = "https://github.com/qquartsco-svg/Cognitive_Kernel"
Documentation = "https://github.com/qquartsco-svg/Cognitive_Kernel#readme"
Repository = "https://github.com/qquartsco-svg/Cognitive_Kernel"
Issues = "https://github.com/qquartsco-svg/Cognitive_Kernel/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

